third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/display-underscore.rs
use thiserror::Error;

#[derive(Error, Debug)]
#[error("{_}")]
pub struct Error;

fn main() {}
